--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
+    "connect-mongodb-session": "^3.1.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^15.0.1",
     "ejs": "^3.1.6",
@@ -21,6 +22,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.3",
+    "otp-generator": "^4.0.0",
     "path": "^0.12.7",
     "socket.io": "^4.4.1",
     "swagger-ui-express": "^4.3.0"
